tools/tree-sitter-nova/grammar.js
    source_file: $ => repeat($._top_level),

    // Top-level prefers declaration constructs; we lift `prec` on the
    // declaration variants so the parser disambiguates `let` at module
    // scope from `let` inside a block.
    _top_level: $ => choice(
      prec(1, $.fn_decl),
      prec(1, $.extern_fn_decl),
      prec(1, $.import_decl),
      prec(1, $.struct_decl),
      prec(1, $.enum_decl),
      prec(1, $.const_decl),
      prec(1, $.cognitive_decl),    // mind / soul / system
      $._statement,        // includes let, if, while, for, asm, expr
    ),

    // Cognitive-DSL `mind`/`soul`/`system` declarations. R10-era
    // experimental syntax used by examples/*_demo.nova files.
    // We keep the grammar permissive — these are user-defined
    // declarative records with named sections; the compiler lowers
    // them into a series of runtime calls via a macro pass.
    fn_decl: $ => seq(
      'fn',
      // Method-style decl `fn Type.method(self, ...)` — captured by
      // letting the name be a single identifier OR a `Type.method`
      // chain. The compiler folds this into a `Type.method` builtin.
      field('name', choice($.identifier, $.qualified_fn_name)),
      // R22B: optional `<T, U>` type-parameter list.
      optional(field('type_parameters', $.type_parameters)),
      '(',
      field('parameters', optional($.parameter_list)),
      ')',
      // Optional `-> Type` return-type annotation (R9E). NOVA also
      // accepts the legacy `: Type` spelling for forward compatibility
      // with older sources (cf. R22B test_generic_fn `legacy_add`).
      optional(seq(choice('->', ':'), field('return_type', $.type_expression))),
      field('body', $.block),
    ),

    // `fn Type.method(self, ...)` method-binding head — R12-era feature
    // still used widely in tests/examples (test_struct_methods.nova).
    parameter_list: $ => commaSepTrail($.parameter),

    parameter: $ => seq(
      field('name', $.identifier),
      // Optional `: Type` annotation, currently unused by the compiler
      // but allowed by the LSP-facing syntax.
      optional(seq(':', field('type', $.type_expression))),
      // Optional default-value: `fn greet(name, times = 1)`.
      optional(seq('=', field('default', $._expression))),
    ),

    // -----------------------------------------------------------------
    // Type expressions — bare ident, generic `T<U, V>`, qualified
    // `Type::Variant`, or function type `T -> U`. R22B extends this
    // with `T -> U` so `f: T -> U` parses inside a parameter list.
    // -----------------------------------------------------------------
    let_decl: $ => seq(
      'let',
      choice(
        seq(
          field('name', $.identifier),
          optional(seq(':', field('type', $.type_expression))),
          repeat(seq(',', field('name', $.identifier))),
          '=',
          field('value', choice($._expression, $._expression_list)),
        ),
        seq(
          field('pattern', $.list_pattern),
          '=',
          field('value', $._expression),
        ),
        // R25A: `let Point { x: px, y: py } = p` — struct destructure
        // pattern at let head. Dynamic precedence picks this over the
        // single-name reading when the identifier is followed by a
        // `{` and field-init-like contents.
        prec.dynamic(20, seq(
          field('pattern', $.struct_pattern),
          '=',
          field('value', $._expression),
        )),
        // R32D: `let Pair(a, b) = pair`, `let Some(Some(v)) = nested`,
        // `let Ok(Point { x, y }) = res`. The variant-pattern branch
        // sits at the same dynamic-precedence (20) as struct_pattern
        // so the parser commits to it over the fall-through call-
        // expression reading. Path-qualified variants
        // (`Result::Ok(v)`) and bare-identifier variants (`Some(v)`)
        // share this branch via `variant_pattern`'s own grammar.
        prec.dynamic(20, seq(
          field('pattern', $.variant_pattern),
          '=',
          field('value', $._expression),
        )),
      ),
      optional(';'),
    ),

    struct_pattern: $ => prec.dynamic(20, seq(
      field('type', $.identifier),
      '{',
      optional($.struct_pattern_field_list),
      '}',
    )),

    struct_pattern_field_list: $ => seq(
      choice($.struct_pattern_field, $.rest_field_pattern),
      repeat(seq(',', choice($.struct_pattern_field, $.rest_field_pattern))),
      optional(','),
    ),

    // Each pattern-field is either:
    //   * `name: pattern`  — explicit binder (pattern can be a literal
    //     constant for match arms, or an identifier binder).
    //   * `name`           — shorthand: binds field to a local of the
    //     same name.
    struct_pattern_field: $ => choice(
      seq(
        field('name', $.identifier),
        ':',
        field('pattern', choice($._expression, $.wildcard_pattern)),
      ),
      field('name', $.identifier),
    ),

    // `..` rest pattern: matches and discards the remaining fields.
    // Distinct from list_pattern's `...rest` because struct destructure
    // doesn't bind a name to the leftovers.
    rest_field_pattern: $ => '..',

    // Comma-separated list of expressions, used as the RHS of multi-
    // binding let and multi-assign.
    _expression_list: $ => prec.right(seq(
      $._expression,
      repeat1(seq(',', $._expression)),
    )),

    // -----------------------------------------------------------------
    // asm { "..." "..." }
    // -----------------------------------------------------------------

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.let_decl,                  // `let` may appear inside a block
      $.const_decl,
      $.if_statement,
      $.if_let_statement,          // R33C: `if let PAT = expr { ... }`
      $.while_statement,
      $.do_while_statement,
      $.for_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.asm_block,
      $.impl_block,
      $.labeled_statement,         // `@label while ...`
      $.assignment_statement,
      $.expression_statement,
      $.block,                     // bare block is a valid statement
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      optional(seq(
        'else',
        field('alternative', choice($.block, $.if_statement)),
      )),
    )),

    // R33C: `if let PAT = expr { ... } [else { ... } | else if ... | else if let ...]`.
    // The pattern slot reuses `_pattern` from match arms, so every
    // R31D / R32D pattern shape that works at match-arm head also
    // works at if-let head: wildcards, variant patterns (incl. nested
    // payload binders), struct patterns, and bare literal / identifier
    // patterns. `prec.right` resolves the dangling-else chain in favour
    // of the closest preceding `if` / `if let`, matching the compiler's
    // recursive-descent parser. The else branch may chain to another
    // if-let, a plain if-stmt, or a bare block.
    if_let_statement: $ => prec.right(seq(
      'if',
      'let',
      field('pattern', $._pattern),
      '=',
      field('value', $._expression),
      field('consequence', $.block),
      optional(seq(
        'else',
        field('alternative', choice($.block, $.if_let_statement, $.if_statement)),
      )),
    )),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
      optional(';'),
    )),

    // `break` / `continue` may take:
    //   * an optional `@label` target (`break @outer`),
    //   * an optional `if cond` guard (`break if i > 5`,
    //     `break @outer if inner > 2`).
    // Combined form `break @label if cond` is used in
    // test_break_continue_if.nova.
    expression_statement: $ => seq(
      $._expression,
      optional(';'),
    ),

    // -----------------------------------------------------------------
    // Expressions
    // -----------------------------------------------------------------

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.ternary_expression,
      // R20A: postfix `?` Result-propagation.
      $.try_propagate_expression,
      // `expr @ score` confidence annotation.
      $.confidence_expression,
      // `...iter` spread, used in calls and list literals.
      $.spread_expression,
      // R15-era `if cond { a } else { b }` as expression.
      $.if_expression,
      // R33C: `if let PAT = expr { ... } else { ... }` as expression.
      $.if_let_expression,
      $.match_expression,
      $.lambda_expression,
      $.call_expression,
      // R25A: `Point { x: 1, y: 2 }` brace-init. Sits at call-level
      // precedence so `Point { x: 1 }.x` field-access chains work.
      $.struct_init_expression,
      $.index_expression,
      $.slice_expression,
      $.field_expression,
      $.parenthesized_expression,
      $.path_expression,        // R17A: `Type::Variant` constructor base
      $.list_literal,
      $.map_literal,
      $.map_comprehension,
      $.list_comprehension,
      $.number,
      $.float,
      $.string_literal,
      $.boolean,
      $.none_literal,
      $.identifier,
    ),

    // Anonymous function: `fn(x, y) { ... }`
    match_expression: $ => seq(
      'match',
      field('scrutinee', $._expression),
      '{',
      repeat($.match_arm),
      '}',
    ),

    match_arm: $ => prec.dynamic(100, seq(
      field('pattern', $._pattern),
      // Optional `if cond` guard: `_ if x > 0 => ...`.
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('value', choice($._expression, $.block)),
      optional(','),
    )),

    _pattern: $ => choice(
      $.wildcard_pattern,
      // `is int` / `is str` type patterns. Higher dynamic precedence
      // so the parser prefers it over starting a new binary `value is T`.
      $.is_pattern,
      // R17A destructure pattern: `Option::Some(v)`, `Shape::Rect(w, h)`,
      // `Tree::Leaf(x)`.
      $.variant_pattern,
      // R25A: `Point { x: 0, y: 0 }`, `Point { x, y }`,
      // `Point { x: 7, y: _ }`. Sits at higher dynamic precedence than
      // the generic `_expression` fallback so a `Type { ... }` arm
      // resolves to struct_pattern, not struct_init_expression.
      $.struct_pattern,
      // Other patterns: bare literal / identifier / path constructor
      // with no binders. We re-use the expression rule so number/string
      // literals and `Option::None` (no parens) all parse as patterns.
      $._expression,
    ),

    variant_pattern: $ => prec.dynamic(10, seq(
      field('path', choice($.path_expression, $.identifier)),
      '(',
      optional(commaSep1($._variant_binder)),
      ')',
    )),

    // Each binder is either a name (`v`, `w`), the wildcard `_`, or
    // — R32D — another nested pattern. The recursive shapes allow
    // `Some(Some(v))`, `Ok(Pair(a, b))`, `Result::Ok(Point { x, y })`
    // at any depth. Identifier / `_` binders keep the same anonymous-
    // child position they had in R17A, so the R17A / R25A corpus
    // snapshots remain byte-identical.
    _variant_binder: $ => choice(
      $.variant_pattern,
      $.struct_pattern,
      $.identifier,
      $.wildcard_pattern,
    ),

    wildcard_pattern: $ => '_',

    binary_expression: $ => {
      const table = [
        ['|>', PREC.pipe],
        ['??', PREC.nullish],
        ['||', PREC.logical_or],
        ['or', PREC.logical_or],
        ['&&', PREC.logical_and],
        ['and', PREC.logical_and],
        ['|',  PREC.bitwise_or],
        ['^',  PREC.bitwise_xor],
        ['&',  PREC.bitwise_and],
        ['==', PREC.equality],
        ['!=', PREC.equality],
        ['<',  PREC.comparison],
        ['<=', PREC.comparison],
        ['>',  PREC.comparison],
        ['>=', PREC.comparison],
        ['in', PREC.membership],
        ['is', PREC.membership],
        ['..', PREC.range],
        ['..=', PREC.range],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['+',  PREC.additive],
        ['-',  PREC.additive],
        ['*',  PREC.multiplicative],
        ['/',  PREC.multiplicative],
        ['%',  PREC.multiplicative],
        ['**', PREC.power],
        // R10-era cognitive-DSL flow operators. They share precedence
        // with the pipe so chains like `sig ~> a ~> b` parse left-to-
        // right just like `5 |> f |> g`.
        ['~>',  PREC.pipe],   // forward flow
        ['<~',  PREC.pipe],   // backward flow / reflection
        ['~~>', PREC.pipe],   // tentative flow
        ['<~~', PREC.pipe],
        ['=>>', PREC.pipe],   // broadcast
        ['<<=', PREC.pipe],   // collect
        ['<<~', PREC.pipe],
        ['<=>', PREC.pipe],   // bidirectional
        ['|~>', PREC.pipe],   // filtered flow
      ];

      const standard = table.map(([op, prec_level]) =>
        prec.left(prec_level, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        )),
      );

      // Two-token `not in` membership operator (test_not_in.nova). We
      // accept the keywords as a sequence — tree-sitter can't easily
      // fuse non-adjacent words into one token without an external
      // scanner. The CST captures them as two adjacent terminals under
      // the operator field via the `not_in_operator` wrapper node.
      const not_in_form = prec.left(PREC.membership, seq(
        field('left', $._expression),
        field('operator', alias(seq('not', 'in'), $.not_in_operator)),
        field('right', $._expression),
      ));

      return choice(...standard, not_in_form);
    },

    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '-', '~', '+', 'not')),
      field('operand', $._expression),
    )),

    // Spread `...expr` — used as a call argument or list-literal item.
    call_expression: $ => prec(PREC.call, seq(
      field('function', choice(
        $.identifier,
        $.field_expression,
        $.path_expression,        // R17A: `Option::Some(42)`
      )),
      '(',
      field('arguments', optional($.argument_list)),
      ')',
    )),

    // R5-era named-argument call form: `greet(name: "Alice", greeting: "Hello")`.
    // Names are documentation-only — the compiler binds positionally.
    // Trailing comma allowed (test_trailing_comma.nova).
    argument_list: $ => seq(
      choice($.named_argument, $._expression),
      repeat(seq(',', choice($.named_argument, $._expression))),
      optional(','),
    ),

    path_expression: $ => prec(PREC.path_qualified, seq(
      field('type', $.identifier),
      '::',
      field('member', $.identifier),
    )),

    string_literal: $ => choice(
      // Interpolated form has higher precedence so any `"..."` with
      // an internal `${expr}` or `\n` escape goes through the
      // structured rule below.
      prec(2, $._interpolated_string),
      $._plain_string,
    ),

    // Plain string (no escapes, no interpolation). Matched as a
    // single atomic token so the lexer never consults `extras`
    // inside the body — that protects strings like `"#"` from
    // having their inner `#` mis-tokenised as a `#` comment. We
    // explicitly disallow `\` so any escape-bearing string falls
    // through to `_interpolated_string`. For `$`, plain strings
    // accept `$` as a body character only when it's NOT followed
    // by `{` (which would start an interpolation). The trailing
    // `$` before the closing `"` is also accepted via the
    // single-char `$` alternative.
    _plain_string: $ => token(seq(
      '"',
      repeat(choice(
        /[^"\\$]+/,
        // `$<char>` for any non-`{`, non-`"` char.
        /\$[^{"]/,
      )),
      // Optional trailing `$` (no follow char) before the closing quote.
      optional('$'),
      '"',
    )),
